log
Thu 24 Aug 2023 08:13:04 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3ee0922
Thu 24 Aug 2023 08:44:38 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
c601242
Thu 24 Aug 2023 08:58:45 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
df4d7bc
Thu 24 Aug 2023 09:00:24 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
bf4156c
Sat 26 Aug 2023 03:07:22 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|5
total_score: 15/70
5a63c55
Sat 26 Aug 2023 03:08:02 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
c6f80b8
Sat 26 Aug 2023 03:09:59 AM UTC: 
 list.c | 25 ++++++++++++-------------
 1 file changed, 12 insertions(+), 13 deletions(-)
 tests:  9|3
total_score: 35/70
997efdd
Sat 26 Aug 2023 03:12:35 AM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
66cfc61
Sat 26 Aug 2023 03:14:27 AM UTC: 
 list.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
17dbe5f
Sat 26 Aug 2023 03:14:40 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
a9d3d63
Sat 26 Aug 2023 03:15:23 AM UTC: 
 list.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  10|2
total_score: 45/70
ba8a812
Sat 26 Aug 2023 03:20:33 AM UTC: 
 list.c | 26 ++++++++++++++++++++++----
 1 file changed, 22 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
fb4d52d
Sat 26 Aug 2023 03:25:10 AM UTC: 
 list.c | 42 ++++++++++++++++++++++++++----------------
 1 file changed, 26 insertions(+), 16 deletions(-)
 tests:  11|1
total_score: 55/70
110071e
Sat 26 Aug 2023 03:30:48 AM UTC: 
 list.c | 42 ++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 40 insertions(+), 2 deletions(-)
 tests:  12|0
total_score: 70/70
a50dda1
Sat 26 Aug 2023 03:33:14 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c:13:1: error: expected ‘;’, identifier or ‘(’ before ‘struct’
   13 | struct List {
      | ^~~~~~
Compilation failed
a47000f
